--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   },
   "dependencies": {
     "next": "14.2.1",
+    "next-video": "^1.0.6",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "react-intersection-observer": "^9.10.2",
+    "react-lazyload": "^3.2.1",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
+    "react-transition-group": "^4.4.5",
+    "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8"
   }
